# company-sync

./: .gitignore  environment.yml  problems.log.aetna  problems.log.molina  problems.log.oscar  pyproject.toml
company_sync/: __main__.py  config.py
company_sync/CSVHandler/: __init__.py
company_sync/WSClient/: __init__.py
company_sync/strategies/: oscar_strategy.py
